Sutter Health/src/objects/PDIAutoAssignSelectedCriteria__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store the selected criteria for auto assigning the records to agents</description>
    <fields>
        <fullName>Assign_Based_On__c</fullName>
        <description>Used to Store Filter criteria field</description>
        <label>Assign Based On</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Count_Per_Agent__c</fullName>
        <description>Used to store the Record Count selected on auto assign page.</description>
        <label>Record Count Per Agent</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sorting_Order__c</fullName>
        <description>Used to store sorting order</description>
        <label>Sorting Order</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>PDI Auto Assign Selected Criteria</label>
</CustomObject>